--- a/mainpage.html
+++ b/mainpage.html
@@ -1,31 +1,22 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User Registration</title>
+    <title>User Login</title>
 </head>
 <body>
-    <h2>User Registration</h2>
-    <form action="/submit" method="post" enctype="multipart/form-data" >
+    <h2>User Login</h2>
+
+    <form action="/submit" method="post" enctype="multipart/form-data">
         <label for="username">Username:</label>
         <input type="text" name="username" required><br>
 
         <label for="password">Password:</label>
         <input type="password" name="password" required><br>
 
-        <label for="first_name">First Name:</label>
-        <input type="text" name="first_name"><br>
-
-        <label for="last_name">Last Name:</label>
-        <input type="text" name="last_name"><br>
-
-        <label for="email">Email Address:</label>
-        <input type="email" name="email"><br>
-
-        <label for="file">Upload File:</label>
-        <input type="file" name="textfile" id="textfile"><br>
         <input type="submit" value="Submit">
     </form>
+
+    <p>Don't have an account? <a href="{{ url_for('register') }}">Register here</a>.</p>
 </body>
 </html>
